Update User e fotos

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "vitor2233",
+    "ApiKey": "778833981258618",
+    "ApiSecret": "O3dY8zCFjBWLXc3qjLjzznScP9k"
+  }
 }
